fixed overflow-x

--- a/assets/css/index.style.css
+++ b/assets/css/index.style.css
@@ -16,18 +16,18 @@
     src: url(../fonts/Rajdhani/Rajdhani-Regular.ttf);
 }
 
-
-html, body {
+  * {
     margin: 0;
     padding: 0;
-    height: 100vh;
     box-sizing: border-box;
-}
+  }
 
 /*bg image*/
 body {
     background-image: url("../img/bg.png");
-    height: 100%;
+    height: 100vh;
+    width: 100%;
+    overflow-x: hidden !important;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
